@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)afm.c	1.57 (gritter) 8/7/06
+ * Sccsid @(#)afm.c	1.58 (gritter) 8/8/06
  */
 
 #include <stdlib.h>
@@ -691,6 +691,11 @@ afmaddchar(struct afmtab *a, int C, int tp, int cl, int WX, int B[4], char *N,
 			a->fontab[0] = _unitconv(WX);
 	}
 	a->fontab[a->nchars] = _unitconv(WX);
+	a->bbtab[a->nchars] = malloc(4 * sizeof **a->bbtab);
+	a->bbtab[a->nchars][0] = _unitconv(B[0]);
+	a->bbtab[a->nchars][1] = _unitconv(B[1]);
+	a->bbtab[a->nchars][2] = _unitconv(B[2]);
+	a->bbtab[a->nchars][3] = _unitconv(B[3]);
 	/*
 	 * Crude heuristics mainly based on observations with the existing
 	 * fonts for -Tpost and on tests with eqn.
@@ -837,6 +842,7 @@ afmalloc(struct afmtab *a, int n)
 	a->fitab = calloc(a->fichars, sizeof *a->fitab);
 	a->fontab = malloc((n+NCHARLIB+1)*sizeof *a->fontab);
 	a->fontab[0] = dev.res * dev.unitwidth / 72 / 3;
+	a->bbtab = malloc((n+NCHARLIB+1)*sizeof *a->bbtab);
 	a->kerntab = calloc(n+NCHARLIB+1, sizeof *a->kerntab);
 	a->codetab = malloc((n+NCHARLIB+1)*sizeof *a->codetab);
 	a->codetab[0] = 0;
