@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)afm.h	1.32 (gritter) 7/7/06
+ * Sccsid @(#)afm.h	1.33 (gritter) 8/8/06
  */
 
 #ifndef	TROFF_AFM_H
@@ -74,6 +74,7 @@ extern struct afmtab {
 	char	*fontname;
 	char	*supply;
 	int	*fontab;
+	short	**bbtab;
 	char	*kerntab;
 	short	*codetab;
 	short	*fitab;
